Fix navbar breaking on smaller screen

--- a/pages/css/pages/css-layout/style.css
+++ b/pages/css/pages/css-layout/style.css
@@ -94,3 +94,11 @@ li {
     background: -ms-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* IE10+ */
     background: linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* W3C */
 }
+
+/* MEDIA QUERIES */
+@media only screen and (max-width: 600px) {
+    .main-nav {
+        font-size: 1rem;
+        padding: 0;
+    }
+}
